--- a/14-Random Forest/Lección_Random_Forest.ipynb
+++ b/14-Random Forest/Lección_Random_Forest.ipynb
@@ -1,21 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "8ECiyrDL33HU"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "from numpy.random import seed, choice\n",
@@ -26,29 +17,24 @@
         "from sklearn.metrics import *\n",
         "from imblearn.metrics import specificity_score\n",
         "import pandas as pd"
-      ],
-      "metadata": {
-        "id": "8ECiyrDL33HU"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "_cq6PlyXx76r"
+      },
       "source": [
         "# 1.Creación de la clase RandomForest para problemas de clasificación\n",
         "\n",
         "Cada árbol (un total de n_estimators) se construye con un subconjunto del dataset con reemplazo (Bootstrap) y un subonjunto de variables. La variedad en las predicciones hace que RF sea más efectivo.\n",
         "\n",
         "La técnica aplicada se conoce como Bagging = Bootstrap + Aggregating."
-      ],
-      "metadata": {
-        "id": "_cq6PlyXx76r"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "cuBn07pYxMt6"
       },
@@ -94,15 +80,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 2.Uso para una tarea de clasificación con un modelo simple y otro complejo"
-      ],
       "metadata": {
         "id": "vCNSOLOI_e1m"
-      }
+      },
+      "source": [
+        "# 2.Uso para una tarea de clasificación con un modelo simple y otro complejo"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "9FkBX_2I_obQ"
+      },
+      "outputs": [],
       "source": [
         "# Cargar el conjunto de datos de cáncer de mama\n",
         "data = load_breast_cancer()\n",
@@ -111,15 +102,15 @@
         "\n",
         "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
-      ],
-      "metadata": {
-        "id": "9FkBX_2I_obQ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JHrb0CeUBHNX"
+      },
+      "outputs": [],
       "source": [
         "# Crear y entrenar un bosque simple\n",
         "rf_simple = RandomForestBootstrap(n_estimators=5, max_depth=2, min_samples_leaf=20, max_features=X_train.shape[1]//2, random_state=42, X=X_train, y=y_train)\n",
@@ -128,15 +119,15 @@
         "# Bosque complejo\n",
         "rf_complex = RandomForestBootstrap(n_estimators=100, max_depth=20, min_samples_leaf=1, max_features=int(X_train.shape[1]*0.8), random_state=42, X=X_train, y=y_train)\n",
         "rf_complex.fit()"
-      ],
-      "metadata": {
-        "id": "JHrb0CeUBHNX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0ijqDEFVFQah"
+      },
+      "outputs": [],
       "source": [
         "# Evaluar el modelo complejo en entrenamiento y prueba\n",
         "train_pred_complex = rf_complex.predict(X_train)\n",
@@ -145,15 +136,15 @@
         "# Evaluar el modelo simple en entrenamiento y prueba\n",
         "train_pred_simple = rf_simple.predict(X_train)\n",
         "test_pred_simple = rf_simple.predict(X_test)"
-      ],
-      "metadata": {
-        "id": "0ijqDEFVFQah"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "YyyYE-ZsIV7L"
+      },
+      "outputs": [],
       "source": [
         "def get_metrics(y_train, y_test, y_pred_train, y_pred_test):\n",
         "    # Calcular métricas para el conjunto de entrenamiento\n",
@@ -186,19 +177,11 @@
         "                              index = ['Train','Test', 'Diferencia'])\n",
         "\n",
         "    return metrics_df"
-      ],
-      "metadata": {
-        "id": "YyyYE-ZsIV7L"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Métricas del modelo complejo\n",
-        "get_metrics(y_train, y_test, train_pred_complex, test_pred_complex)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -207,17 +190,9 @@
         "id": "Ekaem9mpBC9Z",
         "outputId": "62f8b9f3-227e-4209-bd37-14ff4e5f3f8c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "            Accuracy        F1       AUC  Precision    Recall  Specificity\n",
-              "Train        1.00000  1.000000  1.000000   1.000000  1.000000     1.000000\n",
-              "Test         0.95614  0.965035  0.951032   0.958333  0.971831     0.930233\n",
-              "Diferencia   0.04386  0.034965  0.048968   0.041667  0.028169     0.069767"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-d5288c1a-8e2c-47b7-a4eb-b0b82cba1a9b\" class=\"colab-df-container\">\n",
@@ -486,19 +461,27 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "            Accuracy        F1       AUC  Precision    Recall  Specificity\n",
+              "Train        1.00000  1.000000  1.000000   1.000000  1.000000     1.000000\n",
+              "Test         0.95614  0.965035  0.951032   0.958333  0.971831     0.930233\n",
+              "Diferencia   0.04386  0.034965  0.048968   0.041667  0.028169     0.069767"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# Métricas del modelo complejo\n",
+        "get_metrics(y_train, y_test, train_pred_complex, test_pred_complex)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Métricas del modelo simple\n",
-        "get_metrics(y_train, y_test, train_pred_simple, test_pred_simple)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -507,17 +490,9 @@
         "id": "k1KJp3wBIqYS",
         "outputId": "3f48b14d-5242-448e-b547-8458e746d6ff"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "            Accuracy        F1       AUC  Precision    Recall  Specificity\n",
-              "Train       0.956044  0.964664  0.956563   0.975000  0.954545     0.958580\n",
-              "Test        0.956140  0.965517  0.946446   0.945946  0.985915     0.906977\n",
-              "Diferencia -0.000096 -0.000853  0.010117   0.029054 -0.031370     0.051603"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-12878c5e-c166-4bf3-b100-28457a7c3a2e\" class=\"colab-df-container\">\n",
@@ -786,23 +761,57 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "            Accuracy        F1       AUC  Precision    Recall  Specificity\n",
+              "Train       0.956044  0.964664  0.956563   0.975000  0.954545     0.958580\n",
+              "Test        0.956140  0.965517  0.946446   0.945946  0.985915     0.906977\n",
+              "Diferencia -0.000096 -0.000853  0.010117   0.029054 -0.031370     0.051603"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 12
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# Métricas del modelo simple\n",
+        "get_metrics(y_train, y_test, train_pred_simple, test_pred_simple)"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "NWKZ1XQDJ0JI"
+      },
       "source": [
         "El modelo simple muestra mucha menos varianza que el modelo complejo y además tiene un sesgo bajo ya que obtiene buenos resultados en ambos conjuntos. El modelo complejo memoriza y tiene alta varianza.\n",
         "\n",
         "*Si cambias el muestreo (random_state en la función train_test_split) probablemente verás que el modelo simple con 2 estimadores funciona mejor sobre el conjunto de entrenamiento que sobre el conjunto de test, este mejor rendimiento en el conjuto de test puede ser debido al muestreo realizado, ya que a veces el conjunto de entrenamiento puede ser más difícil que el conjunto de prueba debido a la variabilidad en los datos de entrenamiento."
-      ],
-      "metadata": {
-        "id": "NWKZ1XQDJ0JI"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.5"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
